# torchrec

examples/inference/: dlrm_packager.py  dlrm_predict.py
torchrec/inference/: CMakeLists.txt  modules.py  server.cpp  server2.cpp
torchrec/inference/include/torchrec/inference/: GPUExecutor.h
torchrec/inference/src/: GPUExecutor.cpp
